web-infras/parser/tests/fixtures/esprima/ES6/arrow-function/rest-without-arrow/output.txt
[SyntaxError]: Invalid rest elements. (1,2)
1|(...a) + 1
 |^
